OO-4828: better members management for curriculum elements