@@ -89,7 +89,7 @@ public class BusinessGroupListController extends AbstractStandardBusinessGroupLi
 		for(StatisticsBusinessGroupRow row:rows) {
 			BusinessGroupMembership membership = row.getMember();
 			Boolean allowLeave =  membership != null;
-			Boolean allowDelete = isAdmin() ? Boolean.TRUE : (membership == null ? null : new Boolean(membership.isOwner()));
+			Boolean allowDelete = isAdmin() ? Boolean.TRUE : (membership == null ? null : Boolean.valueOf(membership.isOwner()));
 			
 			FormLink markLink = uifactory.addFormLink("mark_" + row.getKey(), "mark", "", null, null, Link.NONTRANSLATED);
 			markLink.setIconLeftCSS(row.isMarked() ? Mark.MARK_CSS_LARGE : Mark.MARK_ADD_CSS_LARGE);
